--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -3,11 +3,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #282c34;
-    color: #fff;
+    background-color: #000000;
+    color: rgb(8, 132, 170);
 }
 
 .footer span {
     font-weight: bold;
-    color: #61dafb;
+    color: #138615;;
 }
