--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,6 @@
 .header {
-    background-color: #282c34;
-    color: #61dafb;
+    background-color: #000000;
+    color: #138615;
     text-align: center;
     padding: 1em;
     
